2019-1/221/users/3061/executions/1750_1534.log
== TEST (2019-05-16 08:06:43) 
-- CODE:
x = float(input("Coloque um numero x:"))
k = int(input("Coloque um numero inteiro:"))
i = 1 
s = 0
while i<=n:
	s = s + ((x)**(2*i-1))*(1/(2*i-1))
	i = i + 1 
print(round(s,7))
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    while i<=n:
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 08:07:15) 
-- CODE:
x = float(input("Coloque um numero x:"))
k = int(input("Coloque um numero inteiro:"))
i = 1 
s = 0
while i<=k:
	s = s + ((x)**(2*i-1))*(1/(2*i-1))
	i = i + 1 
print(round(s,7))
	
	
	
-- OUTPUT:
1.2366709
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 08:07:24) 
-- CODE:
x = float(input("Coloque um numero x:"))
k = int(input("Coloque um numero inteiro:"))
i = 1 
s = 0
while i<=k:
	s = s + ((x)**(2*i-1))*(1/(2*i-1))
	i = i + 1 
print(round(s,7))
	
	
	
-- OUTPUT:
1.2366709
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 08:07:31) 
-- CODE:
x = float(input("Coloque um numero x:"))
k = int(input("Coloque um numero inteiro:"))
i = 1 
s = 0
while i<=k:
	s = s + ((x)**(2*i-1))*(1/(2*i-1))
	i = i + 1 
print(round(s,7))
	
	
	
-- OUTPUT:
1.2366709
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 08:07:41) 
-- CODE:
x = float(input("Coloque um numero x:"))
k = int(input("Coloque um numero inteiro:"))
i = 1 
s = 0
while i<=k:
	s = s + ((x)**(2*i-1))*(1/(2*i-1))
	i = i + 1 
print(round(s,7))
	
	
	
-- EXECUTION TIME:
0.161948
-- TEST CASE 1:
---- input:
0.89
3
---- correct output:
1.2366709
---- user output:
1.2366709
-- TEST CASE 2:
---- input:
0.25
6
---- correct output:
0.2554128
---- user output:
0.2554128
-- TEST CASE 3:
---- input:
0.2635
4
---- correct output:
0.2698651
---- user output:
0.2698651
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
